--- a/package.json
+++ b/package.json
@@ -1,7 +1,12 @@
 {
   "dependencies": {
+    "dotenv": "^17.2.1",
     "express": "^5.1.0",
+    "mysql2": "^3.14.3",
     "nodemon": "^3.1.10",
     "validator": "^13.15.15"
+  },
+  "scripts": {
+    "start": "node src/app.js"
   }
 }
