--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "express": "^5.1.0",
     "mysql2": "^3.14.3",
     "nodemon": "^3.1.10",
+    "sequelize": "^6.37.7",
     "validator": "^13.15.15"
   },
   "scripts": {
