--- a/.env
+++ b/.env
@@ -4,3 +4,5 @@ HOST_NAME = "localhost"
 USER = "root"
 PASSWORD = "Kishan231@"
 DATABASE = "task_app"
+SALT_ROUNDS = 10
+JWT_SECRET_KEY = "TaskManager@231"
